# FERRUM

./: .gitignore  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_STATUS.md  LICENSE  QUICKSTART.md  README.md  RELEASE_NOTES.md
docs/: API_REFERENCE.md
examples/: test_training.rs
ferrum/: Cargo.toml
ferrum-autograd/: Cargo.toml
ferrum-autograd/src/: backward.rs  function.rs  gradcheck.rs  graph.rs  lib.rs  tape.rs
ferrum-autograd/tests/: integration_test.rs
ferrum-core/: Cargo.toml
ferrum-core/src/: autograd_ops.rs  device.rs  dtype.rs  error.rs  lib.rs  shape.rs  storage.rs  tensor.rs
ferrum-cuda/: Cargo.toml
ferrum-cuda/src/: cuda_device.rs  cuda_memory.rs  error.rs  kernels.rs  lib.rs  stream.rs  tensor.rs
ferrum-data/: Cargo.toml
ferrum-data/src/: dataloader.rs  dataset.rs  lib.rs  sampler.rs  transform.rs
ferrum-distributed/: Cargo.toml
ferrum-distributed/src/: backend.rs  collectives.rs  ddp.rs  error.rs  lib.rs  process_group.rs
ferrum-examples/: Cargo.toml
ferrum-examples/src/: lib.rs  mnist.rs  new_features_demo.rs  simple_autograd.rs  simple_nn.rs  train_xor.rs  train_xor_autograd.rs  train_xor_simple.rs
ferrum-nn/: Cargo.toml
ferrum-nn/src/: activation.rs  container.rs  conv.rs  embedding.rs  init.rs  lib.rs  linear.rs  loss.rs  models.rs  module.rs  norm.rs  rnn.rs  transformer.rs
ferrum-ops/: Cargo.toml
ferrum-ops/src/: binary.rs  lib.rs  matmul.rs  reduce.rs  unary.rs
ferrum-optim/: Cargo.toml
ferrum-optim/src/: adam.rs  amp.rs  lib.rs  optimizer.rs  scheduler.rs  sgd.rs
ferrum-serialize/: Cargo.toml
ferrum-serialize/src/: format.rs  io.rs  lib.rs
ferrum/src/: lib.rs
