[package]
name = "ferrum-autograd"
description = "Automatic differentiation engine for FERRUM deep learning framework"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
ferrum-core.workspace = true
thiserror.workspace = true
parking_lot.workspace = true
smallvec.workspace = true

[dev-dependencies]
criterion = "0.5"
