[package]
name = "ferrum-cuda"
version = "1.0.0"
edition = "2021"
authors = ["Pratik Acharya <pratik@ferrum.ai>"]
description = "CUDA backend for FERRUM deep learning framework"
license = "Apache-2.0"
repository = "https://github.com/pratikacharya1234/ferrum"
keywords = ["deep-learning", "cuda", "gpu", "machine-learning"]
categories = ["science", "mathematics"]

[dependencies]
ferrum-core = { path = "../ferrum-core", version = "1.0.0" }
thiserror = "1.0"
parking_lot = "0.12"
once_cell = "1.19"

# Optional CUDA bindings - users need to have CUDA installed
[target.'cfg(feature = "cuda")'.dependencies]
# We'll implement a safe wrapper around CUDA Driver API

[features]
default = []
cuda = []
# Simulated GPU for testing without actual CUDA hardware
simulate = []
